--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -1,6 +1,6 @@
 .thumb {
     width: 100%;
-    height: 255px;
+    height: 225px;
     position: relative;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -13,7 +13,7 @@
         object-fit: cover;
         border-radius: inherit;
         transform: scale(1);
-        transition: transform 300ms;
+        transform: transform 300ms;
     }
 
     &__title {
@@ -40,6 +40,10 @@
             transform: scale(1.01);
         }
     }
+}
+h2.thumb__title {
+    display: flex;
+    align-items: flex-end;
 }
 
 @keyframes fadeInUp {
