--- a/src/styles/components/_mainbanner.scss
+++ b/src/styles/components/_mainbanner.scss
@@ -8,7 +8,7 @@
     display: flex;
   
     &__img {
-      width: inherit;
+      width: 100%;
       height: inherit;
       object-fit: cover;
       border-radius: inherit;
@@ -47,5 +47,6 @@
       height: 100%;
       width: 100%;
       border-radius: inherit;
+     
     }
   }
