--- a/src/styles/components/_server.scss
+++ b/src/styles/components/_server.scss
@@ -6,6 +6,7 @@
         font-size: 12px;
         font-weight: 500;
         margin-right: 10px;
+        width: min-content;
         @include media-query(medium) {
             font-size: 15px;
             display: flex;
