--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -1,27 +1,18 @@
-@charset "UTF-8";
-/*  ---------------------------------------------------------------------- *\
-        Indendation de la CODEBASE système 7-1 PARTIELS avec Sass préprocesseur ;
-        Compilation main.SCSS vers main.CSS avec --watch flag dans package.json ;
-        "sass": "sass --watch ./src/sass:./src",
-\*  ---------------------------------------------------------------------- */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+:root {
+  font-size: 62.5%;
+  font-family: "Montserrat", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-weight: 500;
+  font-style: normal;
+}
+
 body {
-  margin: 0;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  max-width: 1440px;
-  margin: auto;
-  position: relative;
-  min-height: 100vh;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-#root {
-  padding-bottom: 209px;
+  margin: 5%;
 }
 
 .banner {
@@ -48,7 +39,7 @@ code {
   height: 100%;
 }
 .banner__overlay {
-  background-color: #000;
+  background-color: black;
   position: absolute;
   top: 0;
   border-radius: 10px;
@@ -113,6 +104,7 @@ code {
 .collapse__button {
   color: #f7f7f7;
   width: 100%;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   background-color: #ff6060;
@@ -124,7 +116,7 @@ code {
   position: relative;
   z-index: 1;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .collapse__button {
     height: 38px;
   }
@@ -138,10 +130,11 @@ code {
 @media only screen and (min-width: 992px) {
   .collapse__button {
     height: 52px;
+    font-size: 18px;
   }
 }
 .collapse__arrow {
-  margin-right: 1rem;
+  margin-right: 15px;
   pointer-events: none;
   transform: rotate(90deg);
   transition: transform 300ms;
@@ -165,7 +158,7 @@ code {
   margin-top: -5px;
   z-index: -1;
   max-height: 0;
-  transition: max-height 250ms ease-out, padding 300ms ease-out;
+  transition: max-height 250ms ease-in-out, padding 300ms ease-out;
   overflow: hidden;
   padding-left: 12px;
 }
@@ -180,6 +173,7 @@ code {
 }
 @media only screen and (min-width: 992px) {
   .collapse__text {
+    font-family: "Montserrat";
     font-size: 18px;
   }
 }
@@ -225,7 +219,7 @@ code {
 }
 .thumb {
   width: 100%;
-  height: 255px;
+  height: 225px;
   position: relative;
   margin-bottom: 20px;
   border-radius: 10px;
@@ -238,7 +232,7 @@ code {
   object-fit: cover;
   border-radius: inherit;
   transform: scale(1);
-  transition: transform 300ms;
+  transform: transform 300ms;
 }
 .thumb__title {
   position: absolute;
@@ -258,7 +252,12 @@ code {
   border-radius: inherit;
 }
 .thumb:hover > .thumb__img {
-  transform: scale(1.05);
+  transform: scale(1.01);
+}
+
+h2.thumb__title {
+  display: flex;
+  align-items: flex-end;
 }
 
 @keyframes fadeInUp {
@@ -289,47 +288,31 @@ code {
   }
 }
 
-.server {
-  display: flex;
-  justify-content: flex-end;
-}
-.server__name {
-  font-size: 12px;
-  font-weight: 500;
-  margin-right: 10px;
-}
 @media only screen and (min-width: 768px) {
-  .server__name {
-    font-size: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    row-gap: 20px;
+    margin-top: 40px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .server__name {
-    font-size: 18px;
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 50px;
+    row-gap: 30px;
+    background: #f7f7f7;
+    padding: 50px;
+    border-radius: 25px;
+    margin-bottom: 40px;
   }
 }
-.server__name p {
-  margin: 0;
-  text-align: end;
-}
-.server__picture {
-  border-radius: 50%;
-  height: 32px;
-  width: 32px;
-}
-@media only screen and (min-width: 768px) {
-  .server__picture {
-    height: 48px;
-    width: 48px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .server__picture {
-    height: 64px;
-    width: 64px;
+@media only screen and (min-width: 1240px) {
+  .home__products {
+    row-gap: 40px;
+    column-gap: 60px;
   }
 }
 
@@ -337,12 +320,12 @@ code {
   position: relative;
 }
 .slider__active-picture {
-  height: 255px;
+  height: 225px;
   width: 100%;
   transform: scale(1);
   transition: transform 300ms;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .slider__active-picture {
     height: 295px;
   }
@@ -357,7 +340,7 @@ code {
     height: 375px;
   }
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1240px) {
   .slider__active-picture {
     height: 415px;
   }
@@ -372,7 +355,7 @@ code {
   object-fit: cover;
   border-radius: 10px;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .slider__picture {
     border-radius: 15px;
   }
@@ -400,14 +383,14 @@ code {
 .slider__next-icon {
   margin-right: 5px;
 }
-.slider__previous-icon {
+.slider__previousIcon {
   margin-left: 5px;
 }
 .slider__next-icon, .slider__previous-icon {
   height: 16px;
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .slider__next-icon, .slider__previous-icon {
     height: 27px;
   }
@@ -447,10 +430,10 @@ code {
   min-width: 68px;
   text-align: center;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .tag {
     padding: 4px 12px;
-    border-radius: 7px;
+    border-radius: 10px;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -464,7 +447,7 @@ code {
   font-size: 10px;
   font-weight: 500;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .tag__text {
     font-size: 12px;
   }
@@ -475,33 +458,45 @@ code {
   }
 }
 
-.thumb {
+.homeBanner {
   width: 100%;
   height: 255px;
   position: relative;
   margin-bottom: 20px;
   border-radius: 10px;
-  animation: fadeInUp 600ms ease-in-out;
   overflow: hidden;
+  display: flex;
 }
-.thumb__img {
-  width: inherit;
-  height: inherit;
-  object-fit: cover;
-  border-radius: inherit;
-  transform: scale(1);
-  transition: transform 300ms;
-}
-.thumb__title {
+.homeBanner__title {
+  display: flex;
   position: absolute;
-  bottom: 0;
-  font-size: 18px;
-  font-weight: 500;
-  margin: 15px 20px;
+  justify-items: center;
+  align-self: center;
+  font-size: 50px;
+  font-weight: 300;
+  padding: 20%;
   color: #fff;
   box-sizing: inherit;
 }
-.thumb__overlay {
+@media only screen and (min-width: 320px) {
+  .homeBanner__title {
+    padding: 5%;
+    font-size: 24px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .homeBanner__title {
+    padding: 15%;
+    font-size: 35px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .homeBanner__title {
+    padding: 20%;
+    font-size: 50px;
+  }
+}
+.homeBanner__overlay {
   position: absolute;
   top: 0;
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
@@ -509,20 +504,14 @@ code {
   width: 100%;
   border-radius: inherit;
 }
-.thumb:hover > .thumb__img {
-  transform: scale(1.01);
+
+.thunb__img {
+  width: 100%;
+  height: inherit;
+  object-fit: cover;
+  border-radius: inherit;
 }
 
-@keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    transform: translateY(5px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -530,7 +519,7 @@ code {
   margin: 2%;
   padding-top: 20px;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .navbar {
     margin: 2% 2%;
   }
@@ -550,7 +539,7 @@ code {
   width: 33%;
   justify-content: space-around;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .navbar__links {
     width: 60%;
   }
@@ -562,10 +551,10 @@ code {
 }
 @media only screen and (min-width: 992px) {
   .navbar__links {
-    width: 33%;
+    width: 27%;
   }
 }
-.navbar__links--active {
+.navbar__links__style {
   width: 50%;
   color: #ff6060;
   display: flex;
@@ -574,50 +563,25 @@ code {
   font-weight: 500;
   text-decoration: underline;
 }
-@media only screen and (min-width: 350px) {
-  .navbar__links--active {
+@media only screen and (min-width: 378px) {
+  .navbar__links__style {
     font-size: small;
   }
 }
 @media only screen and (min-width: 768px) {
-  .navbar__links--active {
+  .navbar__links__style {
     font-size: medium;
   }
 }
 @media only screen and (min-width: 992px) {
-  .navbar__links--active {
-    font-size: large;
-  }
-}
-.navbar__links--inactive {
-  width: 50%;
-  color: #ff6060;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  text-decoration: none;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-@media only screen and (min-width: 350px) {
-  .navbar__links--inactive {
-    font-size: small;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .navbar__links--inactive {
-    font-size: medium;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .navbar__links--inactive {
+  .navbar__links__style {
     font-size: large;
   }
 }
 .navbar__img {
   height: 47px;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .navbar__img {
     height: 53px;
   }
@@ -635,13 +599,19 @@ code {
 
 .footer {
   position: absolute;
-  bottom: 0;
   width: 100%;
-  background: #000;
+  background: black;
   height: 209px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+.footer__logo {
+  background-color: rgb(0, 0, 0);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 @media only screen and (min-width: 768px) {
@@ -654,7 +624,7 @@ code {
   font-weight: 500;
   font-size: 12px;
 }
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 320px) {
   .footer__text {
     font-size: 16px;
   }
@@ -676,7 +646,7 @@ code {
   margin: 0 5%;
 }
 .about__dropdowns {
-  width: 90%;
+  width: 100%;
   text-align: auto;
   margin-left: auto;
   margin-right: auto;
@@ -689,193 +659,123 @@ code {
   }
 }
 
-.home {
-  margin: 0 5%;
-}
-@media only screen and (min-width: 768px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 40px;
-    row-gap: 20px;
-    margin-top: 40px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
-    row-gap: 30px;
-    background: #f7f7f7;
-    padding: 50px;
-    border-radius: 25px;
-    margin-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .home__products {
-    row-gap: 40px;
-    column-gap: 60px;
-  }
-}
-
 .error {
-  color: #ff6060;
-  height: 570px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-@media only screen and (min-width: 768px) {
-  .error {
-    height: 725px;
-  }
-}
-.error__content {
-  margin: 0 40px;
-  text-align: center;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
 }
 .error__number {
-  font-size: 96px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  color: #ff6060;
+  margin: 66px;
+  padding-left: 110px;
+  width: 599px;
+  height: 263px;
+  font-family: "Montserrat";
+  font-style: normal;
   font-weight: 700;
-  margin: 0;
-}
-@media only screen and (min-width: 350px) {
-  .error__number {
-    font-size: 160px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .error__number {
-    font-size: 224px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .error__number {
-    font-size: 288px;
-  }
+  font-size: 288px;
 }
 .error__text {
-  font-size: 18px;
-  font-weight: 500;
-  margin: 0;
-  margin-top: 10px;
-}
-@media only screen and (min-width: 350px) {
-  .error__text {
-    font-size: 24px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .error__text {
-    font-size: 30px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .error__text {
-    font-size: 36px;
-  }
+  width: 100%;
+  text-align: center;
+  font-size: 36px;
+  color: #ff6060;
+  margin-bottom: 142px;
 }
 .error__link {
+  font-size: 18px;
   color: #ff6060;
-  font-size: 14px;
-  font-weight: 500;
-  margin-top: 133px;
-}
-@media only screen and (min-width: 768px) {
-  .error__link {
-    font-size: 16px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .error__link {
-    font-size: 18px;
-  }
+  margin: 42px;
 }
 
-.singleproduct {
+.house {
   margin: 0 5%;
   color: #ff6060;
 }
-.singleproduct__content {
+.house__content {
   margin-top: 20px;
 }
 @media only screen and (min-width: 992px) {
-  .singleproduct__content {
+  .house__content {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
   }
 }
-.singleproduct__title {
+.house__title {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
 }
-@media only screen and (min-width: 350px) {
-  .singleproduct__title {
+@media only screen and (min-width: 320px) {
+  .house__title {
     font-size: 24px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .singleproduct__title {
+  .house__title {
     font-size: 30px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .singleproduct__title {
+  .house__title {
     font-size: 36px;
   }
 }
-.singleproduct__location {
+.house__location {
   font-size: 14px;
   font-weight: 500;
 }
-@media only screen and (min-width: 350px) {
-  .singleproduct__location {
+@media only screen and (min-width: 320px) {
+  .house__location {
     font-size: 16px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .singleproduct__location {
+  .house__location {
     margin-top: 0;
   }
 }
 @media only screen and (min-width: 992px) {
-  .singleproduct__location {
+  .house__location {
     font-size: 18px;
   }
 }
-.singleproduct__tags {
+.house__tags {
   display: flex;
   flex-wrap: wrap;
 }
-.singleproduct__rating-and-host {
+.house__rating-and-host {
   margin-top: 5px;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
 @media only screen and (min-width: 992px) {
-  .singleproduct__rating-and-host {
+  .house__rating-and-host {
     flex-direction: column-reverse;
     justify-content: space-around;
     margin: 0;
   }
 }
 @media only screen and (min-width: 768px) {
-  .singleproduct__dropdowns {
+  .house__dropdowns {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 40px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .singleproduct__dropdowns {
+  .house__dropdowns {
     column-gap: 80px;
   }
 }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=index.css.map */
