--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,17 @@
-@import "./utils/settings";
-@import"./utils/variables";
-@import "./components/banner";
-@import "./components/collapse";
-@import "./components/cards";
-@import "./components/rating";
-@import "./components/realestate";
-@import "./components/slider";
-@import "./components/tags";
+@import "utils/settings";
+@import"utils/variables";
+@import "components/banner";
+@import "components/collapse";
+@import "components/cards";
+@import "components/rating";
+@import "components/realestate";
+@import "components/slider";
+@import "components/tags";
 
-@import "./layout/mainbanner";
-@import "./layout/navigation";
-@import "./layout/footer";
+@import "layout/mainbanner";
+@import "layout/navigation";
+@import "layout/footer";
 
-@import "./pages/about";
-@import "./pages/error";
-@import "./pages/houses";
+@import "pages/about";
+@import "pages/error";
+@import "pages/houses";
