--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -316,108 +316,51 @@ h2.thumb__title {
   }
 }
 
-.slider {
-  position: relative;
-}
-.slider__active-picture {
-  height: 225px;
-  width: 100%;
-  transform: scale(1);
-  transition: transform 300ms;
-}
-@media only screen and (min-width: 320px) {
-  .slider__active-picture {
-    height: 295px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .slider__active-picture {
-    height: 335px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .slider__active-picture {
-    height: 375px;
-  }
-}
-@media only screen and (min-width: 1240px) {
-  .slider__active-picture {
-    height: 415px;
-  }
-}
-.slider__inactive-picture {
-  transform: scale(1.05);
-  transition: transform 300ms;
-}
-.slider__picture {
-  width: inherit;
-  height: inherit;
-  object-fit: cover;
-  border-radius: 10px;
-}
-@media only screen and (min-width: 320px) {
-  .slider__picture {
-    border-radius: 15px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .slider__picture {
-    border-radius: 20px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .slider__picture {
-    border-radius: 25px;
-  }
-}
-.slider__previous, .slider__next {
-  position: absolute;
-  top: 0;
-  height: 100%;
+.slider-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  position: relative;
+  margin: 7rem auto 1rem auto;
+  max-width: 124rem;
 }
-.slider__next {
-  right: 0;
+
+.slider-container,
+.slider img {
+  height: 50rem;
+  border-radius: 25px;
 }
-.slider__next-icon {
-  margin-right: 5px;
+
+.slider {
+  width: 100%;
+  margin: auto;
 }
-.slider__previousIcon {
-  margin-left: 5px;
+.slider img {
+  width: 100%;
+  object-fit: cover;
 }
-.slider__next-icon, .slider__previous-icon {
-  height: 16px;
-  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
+
+.arrow {
+  position: absolute;
 }
-@media only screen and (min-width: 320px) {
-  .slider__next-icon, .slider__previous-icon {
-    height: 27px;
-  }
+
+.arrow-left {
+  left: 3%;
 }
-@media only screen and (min-width: 768px) {
-  .slider__next-icon, .slider__previous-icon {
-    height: 38px;
-  }
+
+.arrow-right {
+  right: 3%;
 }
-@media only screen and (min-width: 992px) {
-  .slider__next-icon, .slider__previous-icon {
-    height: 50px;
-  }
+
+.no-arrow {
+  content-visibility: hidden;
 }
-.slider__counter {
-  display: none;
-}
-@media only screen and (min-width: 992px) {
-  .slider__counter {
-    display: block;
-    color: #fff;
-    position: absolute;
-    bottom: 25px;
-    font-weight: 500;
-    left: 50%;
-    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
-  }
+
+.page-count {
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  position: absolute;
+  bottom: 3%;
 }
 
 .tag {
