--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -289,7 +289,7 @@ h2.thumb__title {
 }
 
 @media only screen and (min-width: 768px) {
-  .home__products {
+  .home__houses {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 40px;
@@ -298,7 +298,7 @@ h2.thumb__title {
   }
 }
 @media only screen and (min-width: 992px) {
-  .home__products {
+  .home__houses {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 50px;
@@ -310,7 +310,7 @@ h2.thumb__title {
   }
 }
 @media only screen and (min-width: 1240px) {
-  .home__products {
+  .home__houses {
     row-gap: 40px;
     column-gap: 60px;
   }
