--- a/src/styles/components/_realestate.scss
+++ b/src/styles/components/_realestate.scss
@@ -1,4 +1,4 @@
-.home__products {
+.home__houses{
     @include media-query(medium) {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
