--- a/src/styles/components/_mainbanner.scss
+++ b/src/styles/components/_mainbanner.scss
@@ -7,13 +7,6 @@
     overflow: hidden;
     display: flex;
   
-    &__img {
-      width: 100%;
-      height: inherit;
-      object-fit: cover;
-      border-radius: inherit;
-    }
-  
     &__title{
       display: flex;
       position: absolute;
@@ -49,4 +42,10 @@
       border-radius: inherit;
      
     }
-  }
+}
+.thunb__img{
+  width: 100%;
+  height: inherit;
+  object-fit: cover;
+  border-radius: inherit;
+}
