--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -1,92 +1,47 @@
 .slider {
     position: relative;
-
-    &__active-picture {
-        height: 225px;
-        width: 100%;
-        transform: scale(1);
-        transition: transform 300ms;
-        @include media-query(small) {
-            height: 295px;
-        }
-        @include media-query(medium) {
-            height: 335px;
-        }
-        @include media-query(large) {
-            height: 375px;
-        }
-        @include media-query(xlarge) {
-            height: 415px;
-        }
-    }
-
-    &__inactive-picture {
-        transform: scale(1.05);
-        transition: transform 300ms;
-    }
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin: 105px auto 15px auto;
+    max-width: 1860px;    
     &__picture {
-        width: inherit;
-        height: inherit;
+        width: 100%;
+        border-radius: 25px;
+    } 
+}
+    
+.slider {
+    width: 100%;
+    margin: auto;
+    img {
+        width: 100%;
         object-fit: cover;
-        border-radius: 10px;
-        @include media-query(small) {
-            border-radius: 15px;
-        }
-        @include media-query(medium) {
-            border-radius: 20px;
-        }
-        @include media-query(large) {
-            border-radius: 25px;
-        }
     }
-
-    &__previous,
-    &__next {
-        position: absolute;
-        top: 0;
-        height: 100%;
-        display: flex;
-        align-items: center;
-    }
-
-    &__next {
-        right: 0;
-    }
-
-    &__next-icon {
-        margin-right: 5px;
-    }
-
-    &__previousIcon {
-        margin-left: 5px;
-    }
-
-    &__next-icon,
-    &__previous-icon {
-        height: 16px;
-        filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
-        @include media-query(small) {
-            height: 27px;
-        }
-        @include media-query(medium) {
-            height: 38px;
-        }
-        @include media-query(large) {
-            height: 50px;
-        }
-    }
-
-    &__counter {
-        display: none;
-        @include media-query(large) {
-            display: block;
-            color: $white;
-            position: absolute;
-            bottom: 25px;
-            font-weight: 500;
-            left: 50%;
-            filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
-        }
-    }
+}
+    
+.arrow {
+    position: absolute;
+    width: 47px;
+    height: 79px;
+}
+    
+.arrowLeft {
+    left: 3%;
+}
+    
+.arrowRight {
+    right: 3%;
+}
+    
+.no-arrow {
+    content-visibility: hidden;
+}
+    
+.page-count {
+    color: $white;
+    font-size: 18px;
+    position: absolute;
+    bottom: 3%;
 }
