--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -8,6 +8,7 @@
     max-width: 1860px;    
     &__picture {
         width: 100%;
+        max-height: 50%;
         border-radius: 25px;
     } 
 }
