--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,17 +1,19 @@
-@import "./settings";
+@import "./utils/settings";
+@import "./utils/variables";
+
 @import "./components/banner";
 @import "./components/collapse";
 @import "./components/cards";
 @import "./components/rating";
+@import "./components/realestate";
 @import "./components/server";
 @import "./components/slider";
 @import "./components/tags";
-@import "./components/mainbanner";
 
-@import "./components/navigation";
-@import "./components/footer";
+@import "./layout/mainbanner";
+@import "./layout/navigation";
+@import "./layout/footer";
 
-@import "./components/about";
-@import "./components/realestate";
-@import "./components/error";
-@import "./components/singleproduct";
+@import "./pages/about";
+@import "./pages/error";
+@import "./pages/singleproduct";
