Revert "MAJ slider"
This reverts commit 510ef47bbf46d50c27e8f3eddc73803c4135ff87.

--- a/src/styles/components/_mainbanner.scss
+++ b/src/styles/components/_mainbanner.scss
@@ -7,6 +7,13 @@
     overflow: hidden;
     display: flex;
   
+    &__img {
+      width: 100%;
+      height: inherit;
+      object-fit: cover;
+      border-radius: inherit;
+    }
+  
     &__title{
       display: flex;
       position: absolute;
@@ -42,10 +49,4 @@
       border-radius: inherit;
      
     }
-}
-.thunb__img{
-  width: 100%;
-  height: inherit;
-  object-fit: cover;
-  border-radius: inherit;
-}
+  }
