--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,4 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
+@font-face {
+    font-family: "font-1";
+    src: url(../assets/fonts/JosefinSans-Medium.ttf);
+  }
   
   @mixin media-query($key) {
     $size: map-get($breakpoints, $key);
@@ -6,6 +9,8 @@
       @content;
     }
   }
+  
+  $font-1: "font-1", sans-serif;
   
   $primary-color: #ff6060;
   $light-grey: #f7f7f7;
