--- a/src/styles/components/_mainbanner.scss
+++ b/src/styles/components/_mainbanner.scss
@@ -1,52 +1,51 @@
 .homeBanner {
-    width: 100%;
-    height: 255px;
-    position: relative;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    overflow: hidden;
+  width: 100%;
+  height: 255px;
+  position: relative;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  
+  &__title{
     display: flex;
-  
-    &__img {
-      width: 100%;
-      height: inherit;
-      object-fit: cover;
-      border-radius: inherit;
+    position: absolute;
+    justify-items: center;
+    align-self: center;
+    font-size: 50px;
+    font-weight: 300;
+    padding: 20%;
+    color: $white;
+    box-sizing: inherit;
+    @include media-query(small) {
+      padding: 5%;
+      font-size: 24px;
     }
-  
-    &__title{
-      display: flex;
-      position: absolute;
-      justify-items: center;
-      align-self: center;
-      font-size: 50px;
-      font-weight: 300;
+
+    @include media-query(medium){
+      padding: 15%;
+      font-size: 35px;
+    }
+
+    @include media-query(large) {
       padding: 20%;
-      color: $white;
-      box-sizing: inherit;
-      @include media-query(small) {
-        padding: 5%;
-        font-size: 24px;
-      }
-
-      @include media-query(medium){
-        padding: 15%;
-        font-size: 35px;
-      }
-
-      @include media-query(large) {
-        padding: 20%;
-        font-size: 50px;
-      }
-    }
-  
-    &__overlay {
-      position: absolute;
-      top: 0;
-      background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
-      height: 100%;
-      width: 100%;
-      border-radius: inherit;
-     
+      font-size: 50px;
     }
   }
+  
+  &__overlay {
+    position: absolute;
+    top: 0;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
+    height: 100%;
+    width: 100%;
+    border-radius: inherit;
+     
+  }
+}
+.thunb__img {
+  width: 100%;
+  height: inherit;
+  object-fit: cover;
+  border-radius: inherit;
+}
