--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,15 +1,16 @@
-$primary-color: #ff6060;
-$light-grey: #f7f7f7;
-$black: black;
-$white: #fff;
-
 @mixin media-query($key) {
   $size: map-get($breakpoints, $key);
   @media only screen and (min-width: $size) {
     @content;
   }
 }
-  
+
+$primary-color: #ff6060;
+$light-grey: #f7f7f7;
+$black: black;
+$white: #fff;
+$font-1: "font-1", sans-serif;
+
 $breakpoints: (
   small: 320px,
   medium: 768px,
