--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -5,22 +5,25 @@
 * {
   padding: 0;
   box-sizing: border-box;
-=======
-:root {
-  font-size: 62.5%;
-  font-family: "Montserrat", sans-serif;
-}
-
-* {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-weight: 500;
-  font-style: normal;
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
 }
 
 body {
-  margin: 5%;
+  margin: 0;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  max-width: 100%;
+  margin: auto;
+  position: relative;
+  min-height: 100vh;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+#root {
+  padding-bottom: 209px;
 }
 
 li {
@@ -300,7 +303,6 @@ h2.thumb__title {
   }
 }
 
-<<<<<<< HEAD
 .server {
   display: flex;
   justify-content: flex-end;
@@ -311,131 +313,138 @@ h2.thumb__title {
   margin-right: 10px;
   width: min-content;
 }
-=======
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
 @media only screen and (min-width: 768px) {
-  .home__houses {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 40px;
-    row-gap: 20px;
-    margin-top: 40px;
+  .server__name {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 @media only screen and (min-width: 992px) {
-  .home__houses {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
-    row-gap: 30px;
-    background: #f7f7f7;
-    padding: 50px;
-    border-radius: 25px;
-    margin-bottom: 40px;
+  .server__name {
+    font-size: 18px;
   }
 }
-@media only screen and (min-width: 1240px) {
-  .home__houses {
-    row-gap: 40px;
-    column-gap: 60px;
+.server__name p {
+  margin: 0;
+  text-align: end;
+}
+.server__picture {
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+}
+@media only screen and (min-width: 768px) {
+  .server__picture {
+    height: 48px;
+    width: 48px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .server__picture {
+    height: 64px;
+    width: 64px;
   }
 }
 
-<<<<<<< HEAD
-.slider {
+.slider-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
 }
-.slider__active-picture {
+.slider-container__active-picture {
   height: 225px;
   width: 100%;
   transform: scale(1);
   transition: transform 300ms;
 }
 @media only screen and (min-width: 320px) {
-  .slider__active-picture {
+  .slider-container__active-picture {
     height: 295px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .slider__active-picture {
+  .slider-container__active-picture {
     height: 335px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .slider__active-picture {
+  .slider-container__active-picture {
     height: 375px;
   }
 }
 @media only screen and (min-width: 1240px) {
-  .slider__active-picture {
+  .slider-container__active-picture {
     height: 415px;
   }
 }
-.slider__inactive-picture {
+.slider-container__inactive-picture {
   transform: scale(1.05);
   transition: transform 300ms;
 }
-.slider__picture {
+.slider-container__picture {
   width: inherit;
   height: inherit;
   object-fit: cover;
   border-radius: 10px;
 }
 @media only screen and (min-width: 320px) {
-  .slider__picture {
+  .slider-container__picture {
     border-radius: 15px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .slider__picture {
+  .slider-container__picture {
     border-radius: 20px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .slider__picture {
+  .slider-container__picture {
     border-radius: 25px;
   }
 }
-.slider__previous, .slider__next {
+.slider-container__previous, .slider-container__next {
   position: absolute;
   top: 0;
   height: 100%;
   display: flex;
   align-items: center;
 }
-.slider__next {
+.slider-container__next {
   right: 0;
 }
-.slider__next-icon {
+.slider-container__next-icon {
   margin-right: 5px;
 }
-.slider__previousIcon {
+.slider-container__previousIcon {
   margin-left: 5px;
 }
-.slider__next-icon, .slider__previous-icon {
+.slider-container__next-icon, .slider-container__previous-icon {
   height: 16px;
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
 }
 @media only screen and (min-width: 320px) {
-  .slider__next-icon, .slider__previous-icon {
+  .slider-container__next-icon, .slider-container__previous-icon {
     height: 27px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .slider__next-icon, .slider__previous-icon {
+  .slider-container__next-icon, .slider-container__previous-icon {
     height: 38px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .slider__next-icon, .slider__previous-icon {
+  .slider-container__next-icon, .slider-container__previous-icon {
     height: 50px;
   }
 }
-.slider__counter {
+.slider-container__counter {
   display: none;
 }
 @media only screen and (min-width: 992px) {
-  .slider__counter {
+  .slider-container__counter {
     display: block;
     color: #fff;
     position: absolute;
@@ -493,15 +502,6 @@ h2.thumb__title {
   overflow: hidden;
   display: flex;
 }
-<<<<<<< HEAD
-.homeBanner__img {
-  width: 100%;
-  height: inherit;
-  object-fit: cover;
-  border-radius: inherit;
-}
-=======
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
 .homeBanner__title {
   display: flex;
   position: absolute;
@@ -539,8 +539,6 @@ h2.thumb__title {
   width: 100%;
   border-radius: inherit;
 }
-<<<<<<< HEAD
-=======
 
 .thunb__img {
   width: 100%;
@@ -548,7 +546,6 @@ h2.thumb__title {
   object-fit: cover;
   border-radius: inherit;
 }
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
 
 .navbar {
   display: flex;
@@ -601,11 +598,7 @@ h2.thumb__title {
   font-weight: 500;
   text-decoration: underline;
 }
-<<<<<<< HEAD
-@media only screen and (min-width: 320px) {
-=======
 @media only screen and (min-width: 378px) {
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
   .navbar__links__style {
     font-size: small;
   }
@@ -701,9 +694,8 @@ h2.thumb__title {
   }
 }
 
-<<<<<<< HEAD
 @media only screen and (min-width: 768px) {
-  .home__products {
+  .home__houses {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 40px;
@@ -712,7 +704,7 @@ h2.thumb__title {
   }
 }
 @media only screen and (min-width: 992px) {
-  .home__products {
+  .home__houses {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 50px;
@@ -724,14 +716,12 @@ h2.thumb__title {
   }
 }
 @media only screen and (min-width: 1240px) {
-  .home__products {
+  .home__houses {
     row-gap: 40px;
     column-gap: 60px;
   }
 }
 
-=======
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
 .error {
   display: flex;
   justify-content: center;
@@ -768,131 +758,85 @@ h2.thumb__title {
   margin: 42px;
 }
 
-<<<<<<< HEAD
-@media screen and (max-width: 768px) {
-  .error__number {
-    width: 198px;
-    height: 99px;
-    font-size: 96px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    padding-left: 0;
-    margin: 40px;
-  }
-  .error__text {
-    font-size: 18px;
-    margin-bottom: 133px;
-    width: 260px;
-    height: 52px;
-    top: 372px;
-    left: 57px;
-  }
-  .error__link {
-    font-size: 14px;
-    margin: 42px;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .error {
-    margin-top: 188px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .error {
-    margin-top: 195px;
-  }
-}
 .singleproduct {
-=======
-.house {
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
   margin: 0 5%;
   color: #ff6060;
 }
-.house__content {
+.singleproduct__content {
   margin-top: 20px;
 }
 @media only screen and (min-width: 992px) {
-  .house__content {
+  .singleproduct__content {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
   }
 }
-.house__title {
+.singleproduct__title {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
 }
 @media only screen and (min-width: 320px) {
-<<<<<<< HEAD
   .singleproduct__title {
-=======
-  .house__title {
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
     font-size: 24px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .house__title {
+  .singleproduct__title {
     font-size: 30px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .house__title {
+  .singleproduct__title {
     font-size: 36px;
   }
 }
-.house__location {
+.singleproduct__location {
   font-size: 14px;
   font-weight: 500;
 }
 @media only screen and (min-width: 320px) {
-<<<<<<< HEAD
   .singleproduct__location {
-=======
-  .house__location {
->>>>>>> 443709254f5b852baf2c6944966c4d26dd9e2d53
     font-size: 16px;
   }
 }
 @media only screen and (min-width: 768px) {
-  .house__location {
+  .singleproduct__location {
     margin-top: 0;
   }
 }
 @media only screen and (min-width: 992px) {
-  .house__location {
+  .singleproduct__location {
     font-size: 18px;
   }
 }
-.house__tags {
+.singleproduct__tags {
   display: flex;
   flex-wrap: wrap;
 }
-.house__rating-and-host {
+.singleproduct__rating-and-host {
   margin-top: 5px;
   margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
 @media only screen and (min-width: 992px) {
-  .house__rating-and-host {
+  .singleproduct__rating-and-host {
     flex-direction: column-reverse;
     justify-content: space-around;
     margin: 0;
   }
 }
 @media only screen and (min-width: 768px) {
-  .house__dropdowns {
+  .singleproduct__dropdowns {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 40px;
   }
 }
 @media only screen and (min-width: 992px) {
-  .house__dropdowns {
+  .singleproduct__dropdowns {
     column-gap: 80px;
   }
 }
