--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import "./settings";
+@import "utils/settings";
+@import "utils/variables";
 @import "./components/banner";
 @import "./components/collapse";
 @import "./components/cards";
