--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -5,11 +5,10 @@
     justify-content: center;
     position: relative;
     margin: 105px auto 15px auto;
-    max-width: 1860px;    
+    max-width: 100%;    
     &__picture {
-        width: 100%;
-        max-height: 50%;
         border-radius: 25px;
+        object-fit: cover;
     } 
 }
     
@@ -18,7 +17,7 @@
     margin: auto;
     img {
         width: 100%;
-        object-fit: cover;
+      
     }
 }
     
@@ -26,14 +25,29 @@
     position: absolute;
     width: 47px;
     height: 79px;
+    @include media-query(small){
+        width: 15px;
+        height: 30px;
+    }
+
+    @include media-query(medium) {
+        width: 35px;
+        height: 60px;
+    }
 }
     
 .arrowLeft {
     left: 3%;
+    @include media-query(xlarge) {
+        left: 4%;
+    }
 }
     
 .arrowRight {
     right: 3%;
+    @include media-query(xlarge) {
+        right: 4%;
+    }
 }
     
 .no-arrow {
@@ -45,4 +59,13 @@
     font-size: 18px;
     position: absolute;
     bottom: 3%;
+    @include media-query(small){
+        font-size: 10px;
+    }
+    @include media-query(medium){
+        font-size: 14px;
+    }
+    @include media-query(large) {
+        font-size: 18px;
+    }
 }
