--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: "font-1";
-  src: url(../assets/fonts/JosefinSans-Medium.ttf);
-}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 * {
   padding: 0;
   box-sizing: border-box;
@@ -303,34 +300,6 @@ h2.thumb__title {
   }
 }
 
-@media only screen and (min-width: 768px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 40px;
-    row-gap: 20px;
-    margin-top: 40px;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .home__products {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 50px;
-    row-gap: 30px;
-    background: #f7f7f7;
-    padding: 50px;
-    border-radius: 25px;
-    margin-bottom: 40px;
-  }
-}
-@media only screen and (min-width: 1240px) {
-  .home__products {
-    row-gap: 40px;
-    column-gap: 60px;
-  }
-}
-
 .server {
   display: flex;
   justify-content: flex-end;
@@ -376,23 +345,19 @@ h2.thumb__title {
   }
 }
 
-.slider-container {
+.slider {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-}
-.slider__picture {
-  border-radius: 25px;
-  object-fit: cover;
+  margin: 105px auto 15px auto;
+  max-width: 100%;
 }
 
-.slider {
+.slider__picture {
   width: 100%;
-  margin: auto;
-}
-.slider img {
-  width: 100%;
+  border-radius: 25px;
+  object-fit: cover;
 }
 
 .arrow {
@@ -400,13 +365,35 @@ h2.thumb__title {
   width: 47px;
   height: 79px;
 }
+@media only screen and (min-width: 320px) {
+  .arrow {
+    width: 15px;
+    height: 30px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .arrow {
+    width: 35px;
+    height: 60px;
+  }
+}
 
 .arrowLeft {
   left: 3%;
 }
+@media only screen and (min-width: 1240px) {
+  .arrowLeft {
+    left: 4%;
+  }
+}
 
 .arrowRight {
   right: 3%;
+}
+@media only screen and (min-width: 1240px) {
+  .arrowRight {
+    right: 4%;
+  }
 }
 
 .no-arrow {
@@ -418,6 +405,21 @@ h2.thumb__title {
   font-size: 18px;
   position: absolute;
   bottom: 3%;
+}
+@media only screen and (min-width: 320px) {
+  .page-count {
+    font-size: 10px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .page-count {
+    font-size: 14px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .page-count {
+    font-size: 18px;
+  }
 }
 
 .tag {
@@ -502,13 +504,6 @@ h2.thumb__title {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
   height: 100%;
   width: 100%;
-  border-radius: inherit;
-}
-
-.thunb__img {
-  width: 100%;
-  height: inherit;
-  object-fit: cover;
   border-radius: inherit;
 }
 
@@ -663,6 +658,34 @@ h2.thumb__title {
     margin: 1%;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    row-gap: 20px;
+    margin-top: 40px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .home__products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 50px;
+    row-gap: 30px;
+    background: #f7f7f7;
+    padding: 50px;
+    border-radius: 25px;
+    margin-bottom: 40px;
+  }
+}
+@media only screen and (min-width: 1240px) {
+  .home__products {
+    row-gap: 40px;
+    column-gap: 60px;
   }
 }
 
