--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -4,12 +4,13 @@
     justify-content: center;
     position: relative;
     margin: 105px auto 15px auto;
-    max-width: 100%;    
-    &__picture {
-        border-radius: 25px;
-        object-fit: cover;
-    } 
-}
+    max-width: 100%; 
+}    
+.slider__picture {
+    width: 100%;
+    border-radius: 25px;
+    object-fit: cover;
+} 
     
 
 .arrow {
@@ -20,6 +21,7 @@
         width: 15px;
         height: 30px;
     }
+    
 
     @include media-query(medium) {
         width: 35px;
@@ -36,6 +38,7 @@
     
 .arrowRight {
     right: 3%;
+
     @include media-query(xlarge) {
         right: 4%;
     }
