--- a/src/styles/compiled/index.css
+++ b/src/styles/compiled/index.css
@@ -147,10 +147,10 @@ li {
 .collapse__arrow {
   margin-right: 15px;
   pointer-events: none;
-  transform: rotate(90deg);
+  transform: rotate(0);
   transition: transform 300ms;
   transform-origin: bottom -25%;
-  translate: -50% -50%;
+  translate: -50% -16%;
 }
 @media only screen and (min-width: 768px) {
   .collapse__arrow {
@@ -209,7 +209,7 @@ li {
 }
 
 .rotate {
-  transform: rotate(270deg);
+  transform: rotate(180deg);
 }
 
 .show {
@@ -584,7 +584,6 @@ h2.thumb__title {
   align-items: center;
   justify-content: flex-end;
   font-weight: 500;
-  text-decoration: underline;
 }
 @media only screen and (min-width: 320px) {
   .navbar__links__style {
