--- a/src/styles/utils/_settings.scss
+++ b/src/styles/utils/_settings.scss
@@ -16,7 +16,10 @@ body {
   position: relative;
   min-height: 100vh;
 }
-  
+
+main {
+  margin: 0 5%
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
