--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -5,14 +5,32 @@
   margin: 2%;
   padding-top: 20px;
   @include media-query(small) {
-    margin: 2% 2%;
+    margin: 2% 2% 1% 3%;
+  }
+  @media screen and (min-width:350px) {
+    margin: 2% 8% -28% 8%;
+  }
+
+  @media screen and (min-width:375px) {
+    margin: 0 8% -26% 8%;
+  }
+  @media screen and (min-width:415px) {
+    margin: 0 8% -20% 8%;
+  }
+  
+  @media screen and (min-width:425px){
+    margin: 0 7% -22% 7%;
   }
   @include media-query(medium) {
-    margin: 3% 3%;
+    margin: 3% 8% -9% 8%;
   }
   @include media-query(large) {
-     margin: 5% 5%;
+    margin: 2% 7% -7% 7%;
   }
+  @media screen and (min-width:1024px) {
+    margin: 2% 8% 2% 8%;
+  }
+ 
   
   &__links {
     display: flex;
@@ -36,6 +54,7 @@
       align-items: center;
       justify-content: flex-end;
       font-weight: 500;
+      text-decoration: underline;
       @include media-query(small) {
        font-size: small;
       }
