--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -12,7 +12,7 @@
     border-radius: 25px;
     object-fit: cover;
     @include media-query(small){
-        width: 305px;
+        width: 300px;
         height: 255px;
     }
     @media screen and (min-width:345px) {
@@ -22,8 +22,14 @@
     @media screen and (min-width:350px) {
         width: 300px;
     }
+    @media screen and (min-width:370px) {
+        width: 318px;
+    }
     @media screen and (min-width:375px) {
         width: 323px;
+    }
+    @media screen and (min-width:395px) {
+        width: 338px;
     }
     @media screen and (min-width:405px) {
         width: 348px;
@@ -31,26 +37,128 @@
     @media screen and (min-width:425px) {
         width: 364px;
     }
+    @media screen and (min-width:500px) {
+        width: 428px;
+    }
     @media screen and (min-width:443px) {
         width: 381px;
+    }
+    @media screen and (min-width:460px) {
+        width: 394px;
+    }
+    @media screen and (min-width:470px) {
+        width: 402px;
+    }
+    @media screen and (min-width:500px) {
+        width: 429px;
+    }
+    @media screen and (min-width:527px) {
+        width: 452px;
+    }
+    @media screen and (min-width: 550px) {
+        width: 471px;
+    }
+    @media screen and (min-width:572px) {
+        width: 490px;
+    }
+    @media screen and (min-width:600px) {
+        width: 514px;
+    }
+    @media screen and (min-width:630px) {
+        width: 541px;
+    }
+    @media screen and (min-width:670px) {
+        width: 575px;
+    }
+    @media screen and (min-width:700px) {
+        width: 602px;
+    }
+    @media screen and (min-width:710px) {
+        width: 608px;
+    }
+    @media screen and (min-width:738px) {
+        width: 634px;
+    }
+    @media screen and (min-width:746px) {
+        width: 640px;
     }
 
     @include media-query(medium){
         width: 660px;
         height: 320px;
     }
+    @media screen and (min-width:803px) {
+        width: 690px;
+    }
+    @media  screen  and (min-width:837px){
+        width: 717px;
+    }
+    @media screen and (min-width:877px) {
+        width: 753px;
+    }
+    @media screen and (min-width:881px) {
+        width: 755px;
+    }
+    @media screen and (min-width:902px) {
+        width: 774px;
+    }
+    @media screen and (min-width:916px) {
+        width: 786px;
+    }
+    @media screen and (min-width:956px) {
+        width: 820px;
+    }
     @include media-query(large){
-        width: 853px;
+        width: 910px;
     }
     @media screen and (min-width:1024px){
-        width: 880px;
+        width: 941px;
         height: 390px;
     }
-    @include media-query(xxlarge){
-        width: 1208px;
-        height: 415px;
+    @media screen and (min-width:1100px) {
+        width: 1010px;
     }
-} 
+    @media screen and (min-width:1160px) {
+        width: 1067px;
+    }
+    @media screen and (min-width:1180px) {
+        width: 1085px;
+    }
+    @media screen and (min-width:1200px) {
+        width: 1103px;
+    }
+    @media screen and (min-width:1230px) {
+        width: 1131px;
+    }
+    @include media-query(xlarge){
+        width: 1138px;
+    } 
+    @media screen and (min-width:1266px) {
+        width: 1162px;
+    }
+    @media screen and (min-width:1280px) {
+        width: 1176px;
+    }  
+    @media screen and (min-width:1300px) {
+        width: 1194px;
+    }
+    @media screen and (min-width:1320px) {
+        width: 1212px;
+    }
+    @media screen and (min-width:1340px) {
+        width: 1230px;
+    }
+    @media screen and (min-width:1372) {
+        width: 1260px;
+    }
+    @media screen and (min-width:1379px) {
+        width: 1266px;
+    }
+    @media screen and (min-width:1400px) {
+        width: 1286px;
+        height: 415px;  
+    } 
+}    
 .slider__active-picture {
     max-height: 500px;
     min-height: 450px;
@@ -87,20 +195,22 @@
         }
     }
     @include media-query(small) {
-        left: -1%;
+        left: 1%;
     }
      @media screen and (min-width:350px) {
-        left: 3%;
-    }
-   
-    @media screen and (min-width:375px) {
         left: 3%;
     }
     @media screen and (min-width:425px) {
         left: 2%;
     }
+    @media screen and (min-width:827px) {
+        left: 3%;
+    }
     @include media-query(xlarge) {
         left: 4%;
+    }
+    @media screen and (min-width:1280px) {
+        left: 3%;
     }
 }
     
@@ -115,14 +225,22 @@
         }
     }
     @include media-query(small) {
-        right: -10%;
-    } 
-    @media screen and (min-width:375px){
-        right: -6%;
+        right: -8%;
     }
-  
+    @media screen and (min-width:350px) {
+        right: -6%;
+    } 
     @media screen and (min-width:375px) {
         right: -5%;
+    }
+    @media screen and (min-width:470px) {
+        right: -4%;
+    }
+    @media screen and (min-width:500px) {
+        right: -3%;
+    }
+    @media screen and (min-width:600px) {
+        right: -1%;
     }
     @include media-query(medium) {
         right: 1%;
@@ -130,6 +248,9 @@
 
     @include media-query(xlarge) {
         right: 4%;
+    }
+    @media screen and (min-width:1280px) {
+        right: 2%;
     }
 }
     
@@ -157,5 +278,5 @@
     }
     @include media-query(xxlarge){
         margin-bottom: 30px;
-    }
-}
+    } 
+}   
