--- a/src/styles/pages/_singleproduct.scss
+++ b/src/styles/pages/_singleproduct.scss
@@ -1,6 +1,117 @@
+.navbar {
+    @media screen and (min-width:320px) {
+        margin: 3% 4% -30% 4%;
+    }
+    @media screen and (min-width:350px) {
+        margin: 3% 7% -28% 7%;
+    }
+    @media  screen and (min-width:370px) {
+        margin: 3% 7% -26% 7%;
+    }
+    @media screen and (min-width:395px) {
+        margin: 3% 7% -25% 7%;
+    }
+    @media screen and (min-width:425px) {
+        margin: 3% 7% -23% 7%;
+    }
+    @media screen and (min-width:443px) {
+        margin: 3% 8% -22% 8%;
+    }
+    @media screen and (min-width:460px) {
+        margin: 3% 8% -21% 8%;
+    }
+    @media screen and (min-width:470px) {
+        margin: 3% 8% -20% 8%;
+    }
+    @media screen and (min-width:500px) {
+        margin: 3% 7% -19% 7%;
+    }
+    @media screen and (min-width:512px) {
+        margin: 3% 8% -19% 8%;
+    }
+    @media screen and (min-width:550px) {
+        margin: 3% 7% -17% 7%;
+    }
+    @media screen and (min-width:600px) {
+        margin: 3% 8% -17% 8%;
+    }
+    @media screen and (min-width:630px) {
+        margin: 3% 7% -16% 7%;
+    }
+    @media screen and (min-width:640px) {
+        
+    margin: 3% 8% -16% 8%;
+    }
+    @media screen and (min-width:670px) {
+        margin: 3% 7% -14% 7%;
+    }
+    @media screen and (min-width:700px) {
+        margin: 3% 7% -13% 7%;
+    }
+    @media screen and (min-width:710px) {
+        margin: 3% 7% -12% 7%;
+    }
+    @media screen and (min-width:734px) {
+        margin: 3% 9% -12% 9%;
+    }
+    @media screen and (min-width:746px) {
+        margin: 3% 7% -11% 7%;
+    }
+    @media screen and (min-width:794px) {
+        margin: 3% 8% -10% 8%;
+    }
+    @include media-query(medium){
+        margin: 3% 7% -10% 7%;
+    }
+    @media screen and (min-width:808px) {
+        margin: 3% 7% -9% 7%;
+    }
+    @media screen and (min-width:850px) {
+        margin: 3% 9% -8% 9%;
+    }
+    @media screen and (min-width:900px) {
+        margin: 2% 9% -7% 9%;
+    }
+    @media screen and (min-width:936px) {
+        margin: 3% 9% -7% 9%;
+    }
+    @media screen and (min-width:956px) {
+        margin: 3% 7% -8% 7%;
+    }
+    @media screen and (min-width:991px) {
+        margin: 2% 9% -8% 9%;
+    }
+    @include media-query(large){
+        margin: 2% 7% -6% 7%;
+    }
+    @media screen and (min-width:320px) {
+        margin: 2% 9% 2% 9%;
+    }
+    @media screen and (min-width:375px) {
+        margin: 2% 9% 2% 9%;
+    }
+    @media screen and (min-width:425px) {
+        margin: 2% 10% 2% 10%;
+    }
+    @media only screen and (min-width:768px){
+        margin: 2% 9% 2% 9%;
+    }
+    @media screen and (min-width:992px) {
+        margin: 2% 5% 2% 5%;
+    }
+    
+}
+
 .singleproduct {
-    margin: 0 7%;
+    margin: 0 3%;
     color: $primary-color;
+   @media screen and (min-width:325px) {
+    margin: 0 7%;
+   }
+   @include media-query(large){
+    margin:0 4%;
+   }
+
 
     &__content {
         margin-top: 20px;
